--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -47,5 +47,23 @@
 	    <filter-name>encodingFilter</filter-name>
 	    <url-pattern>/*</url-pattern>
 	  </filter-mapping>
+	  
+	  <resource-ref> 
+   <description>mariadb</description> 
+   <res-ref-name>jdbc/mariadb</res-ref-name> 
+   <res-type>javax.sql.DataSource</res-type> 
+   <res-auth>Container</res-auth> 
+</resource-ref>
+
+
+ <error-page>
+  <error-code>404</error-code>
+  <location>/error/404code.jsp</location>
+  </error-page>
+
+  <error-page>
+  <error-code>500</error-code>
+  <location>/error/500code.jsp</location>
+  </error-page>
   
 </web-app>
